Added security for tokens exchange

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
 FRONTEND_IMPORT_PAGE_URI=
 FRONTEND_DEFAULT_SCHEDULE_URI=
+ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
