--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ X_API_KEY=
 ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
 REDIS_HOST=
 REDIS_PORT=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
