--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "ms": "^2.1.3",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.15.0",
@@ -55,6 +56,7 @@
     "@types/jest": "^29.5.2",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^10.0.0",
