--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
 FRONTEND_IMPORT_PAGE_URI=
-FRONTEND_DEFAULT_SCHEDULE_URI=
-FRONTEND_SERVER_ERROR_PAGE=
+FRONTEND_HOME_URI=
 ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
 X_API_KEY=
 ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
