--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
+    "ms": "^2.1.3",
     "prisma": "^5.15.0",
     "qs": "^6.12.2",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +46,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
