--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DATABASE_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+FRONTEND_IMPORT_PAGE_URI=
+FRONTEND_HOME_URI=
+ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
 X_API_KEY=
 ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
