Hotfix/yarn heap memory error (#17)
* Increased memory usage

* Fixed production run

* Recreate yarn lock file

* Added production focus for yarn

* Removed unneeded yarn workspace declaration

* Remove increasing of ram

* Added more optimized build mechanism

* Fixed deploy command

* Rewrote start command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "sleep 3 && yarn prisma migrate deploy && nest start",
+    "start": "sleep 3 && yarn prisma migrate deploy && yarn run start:prod",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
