--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
 FRONTEND_IMPORT_PAGE_URI=
 FRONTEND_HOME_URI=
-ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
+AT_SECRET=
+RT_SECRET=
 X_API_KEY=
 ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
