--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ X_API_KEY=
 ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
 REDIS_HOST=
 REDIS_PORT=
+REDIS_URL=
 REDIS_PASSWORD=
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
