--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
 REDIS_URL=
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
+IMGUR_CLIENT_ID=
