--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^6.0.0",
     "@prisma/client": "^5.15.0",
+    "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bull": "^4.15.1",
@@ -40,6 +41,7 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "convert": "^5.3.0",
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
@@ -62,6 +64,7 @@
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.5.0",
     "@types/jest": "^29.5.2",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.3.1",
