--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^6.0.0",
     "@prisma/client": "^5.15.0",
+    "@types/luxon": "^3.4.2",
     "@types/multer": "^1.4.11",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -45,6 +46,7 @@
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
+    "luxon": "^3.5.0",
     "ms": "^2.1.3",
     "nestjs-throttler-storage-redis": "^0.4.4",
     "nodemailer": "^6.9.14",
