--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
+    "jszip": "^3.10.1",
     "luxon": "^3.5.0",
     "ms": "^2.1.3",
     "nestjs-throttler-storage-redis": "^0.4.4",
