--- a/package.json
+++ b/package.json
@@ -44,15 +44,16 @@
     "class-validator": "^0.14.1",
     "convert": "^5.3.0",
     "cookie-parser": "^1.4.6",
+    "docxtemplater": "^3.49.2",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
-    "jszip": "^3.10.1",
     "luxon": "^3.5.0",
     "ms": "^2.1.3",
     "nestjs-throttler-storage-redis": "^0.4.4",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pizzip": "^3.1.7",
     "prisma": "^5.15.0",
     "qs": "^6.12.2",
     "reflect-metadata": "^0.1.13",
