--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "sleep 3 && yarn prisma migrate deploy && yarn run start:prod",
+    "start": "sleep 3 && yarn prisma migrate deploy && yarn seed && yarn run start:prod",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -17,7 +17,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "npx prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed/seed.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
@@ -44,6 +48,7 @@
     "class-validator": "^0.14.1",
     "convert": "^5.3.0",
     "cookie-parser": "^1.4.6",
+    "csv-parser": "^3.0.0",
     "docxtemplater": "^3.49.2",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
