--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "seed": "ts-node prisma/seed/seed.ts"
   },
   "dependencies": {
+    "@nest-lab/throttler-storage-redis": "^1.0.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/bull": "^10.1.1",
-    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -42,8 +42,6 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bull": "^4.15.1",
-    "cache-manager": "^5.7.1",
-    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "convert": "^5.3.0",
@@ -52,9 +50,9 @@
     "docxtemplater": "^3.49.2",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
+    "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
     "ms": "^2.1.3",
-    "nestjs-throttler-storage-redis": "^0.4.4",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -70,7 +68,6 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.5.0",
