--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ ORIGINS=https://origin1.com,https://origin2.com,https://origin3.com
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
-REDIS_USER
+REDIS_USER=
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
 IMGUR_CLIENT_ID=
